--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "core-js": "^3.8.3",
+    "cropperjs": "^1.5.12",
+    "echarts": "^5.3.3",
+    "element-tiptap": "^1.27.1",
+    "element-ui": "^2.15.8",
+    "json-bigint": "^1.0.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1"
   },
